Rearranged files, organized them into different folders, added in a picture of me, and added my resume.

--- a/HTML Files/Home.html
+++ b/HTML Files/Home.html
@@ -1,11 +1,11 @@
 <!DOCTYPE>
 <html>
 <head>
-    <title>Sameer Rizvi</title>
+    <title>Sameer Rizvi - Home</title>
 </head>
 
 <body>
-    <div class="Intro" text_align:>
+    <div class="Intro" >
         <h1>Sameer Rizvi</h1>
 
     </div>
