--- a/HTML Files/Home.html
+++ b/HTML Files/Home.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div class="Intro" >
+    <div id="Intro" >
         <h1>Sameer Rizvi</h1>
         <img src="C:\Users\srizv\OneDrive\Documents\My Portfolio\Pictures\LinkedInPicture1.png">
     </div>
