--- a/HTML Files/Home.html
+++ b/HTML Files/Home.html
@@ -21,8 +21,21 @@
 <body>
     <div id="Intro" >
         <h1>Sameer Rizvi</h1>
-        <img src="C:\Users\srizv\OneDrive\Documents\My Portfolio\Pictures\LinkedInPicture1.png">
+        <img src="C:\Users\srizv\OneDrive\Documents\My Portfolio\Pictures\LinkedInPicture1.png" id="ProfilePic" class="center">
     </div>
+    <hr>
+
+    <div id="Links">
+        <h3>My Links:</h3>
+        <ul>
+            <li><a href="Resume.html">My Resume</a></li>
+            <li><a href="www.linkedin.com/in/sameer-rizvi-bb788375
+                ">LinkedIn</a></li>
+            <li><a href="https://github.com/samriz">GitHub</a></li>
+        </ul>      
+    </div>
+    
+
 </body>
 
 
