--- a/HTML Files/Home.html
+++ b/HTML Files/Home.html
@@ -15,26 +15,34 @@
 
     <link rel="stylesheet" href="C:\Users\srizv\OneDrive\Documents\My Portfolio\CSS Files\Styles.css">
 
-    <title>Sameer Rizvi - Home</title>
+    <title>Sameer Rizvi - About</title>
 </head>
 
 <body>
     <div id="Intro" >
         <h1>Sameer Rizvi</h1>
-        <img src="C:\Users\srizv\OneDrive\Documents\My Portfolio\Pictures\LinkedInPicture1.png" id="ProfilePic" class="center">
+        <!--<p><img src="C:\Users\srizv\OneDrive\Documents\My Portfolio\Pictures\LinkedInPicture1.png" id="ProfilePic" class="center"></p>-->
     </div>
     <hr>
 
     <div id="Links">
         <h3>My Links:</h3>
         <ul>
-            <li><a href="Resume.html">My Resume</a></li>
+            <li><a href="Resume.html">Resume</a></li>
             <li><a href="www.linkedin.com/in/sameer-rizvi-bb788375
                 ">LinkedIn</a></li>
             <li><a href="https://github.com/samriz">GitHub</a></li>
         </ul>      
     </div>
     
+    <div id="CodeSamples">
+        <h3>My Code Samples:</h3>
+        <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>      
+    </div>
 
 </body>
 
