--- a/HTML Files/AboutMe.html
+++ b/HTML Files/AboutMe.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="C:\Users\srizv\OneDrive\Documents\My Portfolio\CSS Files\Styles.css">
 
-    <title>Sameer Rizvi - Home</title>
+    <title>Sameer Rizvi - About</title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
     </div>
     <hr>
 
-    <h3><a name="Employment"></a>Profession Experience</h3>
+    <h3><a name="Employment"></a>Professional Experience</h3>
 
     <p></p><center><table cellspacing="5" cellpadding="5" width="90%" border="0">
     <tbody>
