--- a/HTML Files/Home.html
+++ b/HTML Files/Home.html
@@ -32,6 +32,7 @@
             <li><a href="www.linkedin.com/in/sameer-rizvi-bb788375
                 ">LinkedIn</a></li>
             <li><a href="https://github.com/samriz">GitHub</a></li>
+            <li><a href="AboutMe.html">About Me</a></li>
         </ul>      
     </div>
     
