Cleaned up the About page. Fixed the LinkedIn broken link. Added target="_blank" for external links

--- a/HTML Files/Home.html
+++ b/HTML Files/Home.html
@@ -29,9 +29,8 @@
         <h3>My Links:</h3>
         <ul>
             <li><a href="Resume.html">Resume</a></li>
-            <li><a href="www.linkedin.com/in/sameer-rizvi-bb788375
-                ">LinkedIn</a></li>
-            <li><a href="https://github.com/samriz">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/sameer-rizvi-bb788375" target="_blank">LinkedIn</a></li>
+            <li><a href="https://github.com/samriz" target="_blank">GitHub</a></li>
             <li><a href="AboutMe.html">About Me</a></li>
         </ul>      
     </div>
