Updated title tag in Home.html and got rid of CodeSamples div because it is unnecessary.

--- a/HTML Files/Home.html
+++ b/HTML Files/Home.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="C:\Users\srizv\OneDrive\Documents\My Portfolio\CSS Files\Styles.css">
 
-    <title>Sameer Rizvi - About</title>
+    <title>Sameer Rizvi - Home</title>
 </head>
 
 <body>
@@ -35,14 +35,14 @@
         </ul>      
     </div>
     
-    <div id="CodeSamples">
+    <!--<div id="CodeSamples">
         <h3>My Code Samples:</h3>
         <ul>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
         </ul>      
-    </div>
+    </div>-->
 
 </body>
 
