Added folder "JavaScript Files". Added "MyScript.js" inside of it. Created function that dynamically creates a menu. Invoking function in all HTML files.

--- a/HTML Files/Home.html
+++ b/HTML Files/Home.html
@@ -12,23 +12,36 @@
 
     <link rel="stylesheet" href="C:\Users\srizv\OneDrive\Documents\My Portfolio\CSS Files\Styles.css">
 
+    <script src="C:\Users\srizv\OneDrive\Documents\My Portfolio\JavaScript Files\MyScript.js"></script>
+
     <title>Sameer Rizvi - Home</title>
 </head>
 
 <body>
+    <div class="Menu"></div>
+    <script>
+        var links = new Array("Home.html", "Resume.html", "About.html");
+        CreateMenu(links);
+    </script>
+    <!--<div class="Menu">
+        <a class="active" href="#">Home</a>
+        <a href="Resume.html">Resume</a>
+        <a href="AboutMe.html">About</a>
+    </div>-->
+
     <div id="Intro" >
         <h1>Sameer Rizvi</h1>
         <!--<p><img src="C:\Users\srizv\OneDrive\Documents\My Portfolio\Pictures\LinkedInPicture1.png" id="ProfilePic" class="center"></p>-->
     </div>
     <hr>
 
-    <div id="Links">
-        <h3>My Links:</h3>
+    <div id="ExternalLinks">
+        <h3>Relevant External Links:</h3>
         <ul>
-            <li><a href="Resume.html">Resume</a></li>
+            <!--<li><a href="Resume.html">Resume</a></li>-->
             <li><a href="https://www.linkedin.com/in/sameer-rizvi-bb788375" target="_blank">LinkedIn</a></li>
             <li><a href="https://github.com/samriz" target="_blank">GitHub</a></li>
-            <li><a href="AboutMe.html">About Me</a></li>
+            <!--<li><a href="AboutMe.html">About Me</a></li>-->
         </ul>      
     </div>
     
