--- a/HTML Files/About.html
+++ b/HTML Files/About.html
@@ -12,10 +12,17 @@
 
     <link rel="stylesheet" href="C:\Users\srizv\OneDrive\Documents\My Portfolio\CSS Files\Styles.css">
 
+    <script src="C:\Users\srizv\OneDrive\Documents\My Portfolio\JavaScript Files\MyScript.js"></script>
+
     <title>Sameer Rizvi - About</title>
 </head>
 
 <body>
+    <div class="Menu"></div>
+    <script>
+        var links = new Array("Home.html", "Resume.html", "About.html");
+        CreateMenu(links);
+    </script>
     <div id="Intro">
         <h1>Sameer Rizvi</h1>
         <p><img src="C:\Users\srizv\OneDrive\Documents\My Portfolio\Pictures\LinkedInPicture1.png" id="ProfilePic" class="center"></p>
