--- a/HTML Files/Resume.html
+++ b/HTML Files/Resume.html
@@ -12,15 +12,20 @@
 
     <link rel="stylesheet" href="C:\Users\srizv\OneDrive\Documents\My Portfolio\CSS Files\Styles.css">
 
+    <script src="C:\Users\srizv\OneDrive\Documents\My Portfolio\JavaScript Files\MyScript.js"></script>
+
     <title>Sameer Rizvi - Resume</title>
 </head>
 
 <body>
+    <div class="Menu"></div>
+    <script>
+        var links = new Array("Home.html", "Resume.html", "About.html");
+        CreateMenu(links);
+    </script>
     <div class="PDF">
         <iframe src="C:\Users\srizv\OneDrive\Documents\My Portfolio\Miscellaneous\Sameer Rizvi - Resume.pdf" width="100%" height="100%"></iframe>
 
     </div>
 </body>
-
-
 </html>
