--- a/HTML Files/Resume.html
+++ b/HTML Files/Resume.html
@@ -2,16 +2,13 @@
 <html lang="en">
 <head>
     <!-- Bootstrap below -->
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>-->
-
+    <!--My CSS and JavaScript below-->
     <link rel="stylesheet" href="C:\Users\srizv\OneDrive\Documents\My Portfolio\CSS Files\Styles.css">
-
     <script src="C:\Users\srizv\OneDrive\Documents\My Portfolio\JavaScript Files\MyScript.js"></script>
 
     <title>Sameer Rizvi - Resume</title>
@@ -25,7 +22,6 @@
     </script>
     <div class="PDF">
         <iframe src="C:\Users\srizv\OneDrive\Documents\My Portfolio\Miscellaneous\Sameer Rizvi - Resume.pdf" width="100%" height="100%"></iframe>
-
     </div>
 </body>
 </html>
