--- a/HTML Files/About.html
+++ b/HTML Files/About.html
@@ -8,8 +8,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!--My CSS and JavaScript below-->
-    <link rel="stylesheet" href="C:\Users\srizv\OneDrive\Documents\My Portfolio\CSS Files\Styles.css">
-    <script src="C:\Users\srizv\OneDrive\Documents\My Portfolio\JavaScript Files\MyScript.js"></script>
+    <!--<link rel="stylesheet" href="C:\Users\srizv\OneDrive\Documents\My Portfolio\CSS Files\Styles.css">
+    <script src="C:\Users\srizv\OneDrive\Documents\My Portfolio\JavaScript Files\MyScript.js"></script>-->
+    <!--My CSS and JavaScript below-->
+    <link rel="stylesheet" href="../CSS Files/Styles.css">
+    <script src="../JavaScript Files/MyScript.js"></script>
 
     <title>Sameer Rizvi - About</title>
 </head>
@@ -22,7 +25,10 @@
     </script>
     <div id="Intro">
         <h1>Sameer Rizvi</h1>
-        <p><img src="C:\Users\srizv\OneDrive\Documents\My Portfolio\Pictures\LinkedInPicture1.png" id="ProfilePic" class="center"></p>
+        <p>
+            <!--<img src="C:\Users\srizv\OneDrive\Documents\My Portfolio\Pictures\LinkedInPicture1.png" id="ProfilePic" class="center">-->
+            <img src="../Pictures/LinkedInPicture1.png" id="ProfilePic" class="center">
+        </p>
         <p>For Inquiries: <a href = "mailto: srizv82@gmail.com">srizv82@gmail.com</a></p>
     </div>
     
