--- a/HTML Files/Home.html
+++ b/HTML Files/Home.html
@@ -8,8 +8,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!--My CSS and JavaScript below-->
-    <link rel="stylesheet" href="C:\Users\srizv\OneDrive\Documents\My Portfolio\CSS Files\Styles.css">
-    <script src="C:\Users\srizv\OneDrive\Documents\My Portfolio\JavaScript Files\MyScript.js"></script>
+    <!--<link rel="stylesheet" href="C:\Users\srizv\OneDrive\Documents\My Portfolio\CSS Files\Styles.css">
+    <script src="C:\Users\srizv\OneDrive\Documents\My Portfolio\JavaScript Files\MyScript.js"></script>-->
+    <!--My CSS and JavaScript below-->
+    <link rel="stylesheet" href="../CSS Files/Styles.css">
+    <script src="../JavaScript Files/MyScript.js"></script>
 
     <title>Sameer Rizvi - Home</title>
 </head>
