--- a/HTML Files/Resume.html
+++ b/HTML Files/Resume.html
@@ -8,8 +8,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!--My CSS and JavaScript below-->
-    <link rel="stylesheet" href="C:\Users\srizv\OneDrive\Documents\My Portfolio\CSS Files\Styles.css">
-    <script src="C:\Users\srizv\OneDrive\Documents\My Portfolio\JavaScript Files\MyScript.js"></script>
+    <!--<link rel="stylesheet" href="C:\Users\srizv\OneDrive\Documents\My Portfolio\CSS Files\Styles.css">
+    <script src="C:\Users\srizv\OneDrive\Documents\My Portfolio\JavaScript Files\MyScript.js"></script>-->
+    <!--My CSS and JavaScript below-->
+    <link rel="stylesheet" href="../CSS Files/Styles.css">
+    <script src="../JavaScript Files/MyScript.js"></script>
 
     <title>Sameer Rizvi - Resume</title>
 </head>
@@ -21,7 +24,8 @@
         CreateMenu(links);
     </script>
     <div class="PDF">
-        <iframe src="C:\Users\srizv\OneDrive\Documents\My Portfolio\Miscellaneous\Sameer Rizvi - Resume.pdf" width="100%" height="100%"></iframe>
+        <!--<iframe src="C:\Users\srizv\OneDrive\Documents\My Portfolio\Miscellaneous\Sameer Rizvi - Resume.pdf" width="100%" height="100%"></iframe>-->
+        <iframe src="../Miscellaneous/Sameer Rizvi - Resume.pdf" width="100%" height="100%"></iframe>
     </div>
 </body>
 </html>
