Replaced all instances of "-" with &mdash; and replaced all quotation marks with q tags.

--- a/HTML Files/About.html
+++ b/HTML Files/About.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../CSS Files/Styles.css">
     <script src="../JavaScript Files/MyScript.js"></script>
 
-    <title>Sameer Rizvi - About</title>
+    <title>Sameer Rizvi &mdash; About</title>
 </head>
 
 <body>
@@ -39,10 +39,10 @@
     <tbody>
         <tr valign="TOP">
         <td>
-            Mid-Late 2021 (Expected Completion):
+            Mid &mdash; Late 2021 (Expected Completion):
         </td> 
         <td>
-            Syracuse University – Syracuse, NY
+            Syracuse University &mdash; Syracuse, NY
             <br>              
             M.S. in Computer Science, 
             <br>
@@ -55,7 +55,7 @@
         <td>
         2015:</td> 
         <td>
-            Loyola University Chicago – Chicago, IL 
+            Loyola University Chicago &mdash; Chicago, IL 
             <br>              
             B.S. in Computer Science, Cum Laude
             <br>      
@@ -73,13 +73,13 @@
         2018:
         </td> 
         <td>
-            American Hotel Register Company - Vernon Hills, IL <br>              
+            American Hotel Register Company &mdash; Vernon Hills, IL <br>              
             Junior Software Developer
             <br>     
         <ul>
             <li>Utilized C#/.NET for development and maintenance on e-commerce website</li>
-            <li>Assisted with the entire lifecycle of analysis - design, coding, testing, implementation and product support</li>
-            <li>Implemented all aspects of application design - high performance design, coding, caching mechanisms, security, encryption, state management, error logging, debugging, code reviews, development environment configuration, and testing</li>
+            <li>Assisted with the entire lifecycle of analysis &mdash; design, coding, testing, implementation and product support</li>
+            <li>Implemented all aspects of application design &mdash; high performance design, coding, caching mechanisms, security, encryption, state management, error logging, debugging, code reviews, development environment configuration, and testing</li>
         </ul>
         </td>
         </tr>
@@ -89,13 +89,13 @@
         2016-2018:
     </td> 
         <td>
-            ACS Group - New Berlin, WI 
+            ACS Group &mdash; New Berlin, WI 
             <br>              
             Information Systems Specialist
             <br>      
     <ul>
-        <li>Constructed a separate “Configurator” - an application that allows Sales and Engineering to configure any product offered by the company, generate quotes and sales orders - for each product offered by the company </li>
-        <li>Tested inside of Microsoft Dynamics which is the platform used to launch the "Configurator", while providing Microsoft Dynamics training to end users </li>
+        <li>Constructed a separate <q>Configurator</q> &mdash; an application that allows Sales and Engineering to configure any product offered by the company, generate quotes and sales orders - for each product offered by the company </li>
+        <li>Tested inside of Microsoft Dynamics which is the platform used to launch the <q>Configurator</q>, while providing Microsoft Dynamics training to end users </li>
         <li>Interacted, introduced, and reviewed requirements with Sales, Engineering and Production departments to ensure proper solution is delivered in a timely manner</li>
     </ul>
     </td> 
@@ -105,7 +105,7 @@
         <td>
         2014-2015:</td> 
         <td>
-            Parker Hannifin Corporation - Lincolnshire, IL 
+            Parker Hannifin Corporation &mdash; Lincolnshire, IL 
             <br>              
             Software Development Intern
             <br>      
@@ -122,7 +122,7 @@
         <td>
         2014:</td> 
         <td>
-            Northwestern Mutual – Milwaukee, WI 
+            Northwestern Mutual &mdash; Milwaukee, WI 
             <br>              
             I.T. Intern
             <br>      
