--- a/HTML Files/Resume.html
+++ b/HTML Files/Resume.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../CSS Files/Styles.css">
     <script src="../JavaScript Files/MyScript.js"></script>
 
-    <title>Sameer Rizvi - Resume</title>
+    <title>Sameer Rizvi &mdash; Resume</title>
 </head>
 
 <body>
