--- a/HTML Files/About.html
+++ b/HTML Files/About.html
@@ -23,7 +23,7 @@
         var links = new Array("Home.html", "Resume.html", "About.html");
         CreateMenu(links);
     </script>
-    <div id="Intro">
+    <div id="Intro" class="jumbotron">
         <h1>Sameer Rizvi</h1>
         <p>
             <!--<img src="C:\Users\srizv\OneDrive\Documents\My Portfolio\Pictures\LinkedInPicture1.png" id="ProfilePic" class="center">-->
