--- a/HTML Files/Home.html
+++ b/HTML Files/Home.html
@@ -29,7 +29,7 @@
         <a href="AboutMe.html">About</a>
     </div>-->
 
-    <div id="Intro" >
+    <div id="Intro" class="jumbotron">
         <h1>Sameer Rizvi</h1>
         <!--<p><img src="C:\Users\srizv\OneDrive\Documents\My Portfolio\Pictures\LinkedInPicture1.png" id="ProfilePic" class="center"></p>-->
     </div>
