--- a/HTML Files/About.html
+++ b/HTML Files/About.html
@@ -30,7 +30,8 @@
             <!--<img src="C:\Users\srizv\OneDrive\Documents\My Portfolio\Pictures\LinkedInPicture1.png" id="ProfilePic" class="center">-->
             <img src="../Pictures/LinkedInPicture1.png" id="ProfilePic" class="center">
         </p>
-        <p>For Inquiries: <a href = "mailto: srizv82@gmail.com">srizv82@gmail.com</a></p>
+        <!--<p>For Inquiries: <a href = "mailto: srizv82@gmail.com">srizv82@gmail.com</a></p>-->
+        <a href = "./Message.html">For Inquiries</a>
     </div>
     
     <hr> <!--this is a horizontal line-->
