Changed name of Mail.php to Message.php.

--- a/HTML Files/Message.html
+++ b/HTML Files/Message.html
@@ -32,7 +32,7 @@
     <hr> <!--this is a horizontal line-->
 
     <center>
-        <form action="../PHP Files/Mail.php" method="post">
+        <form action="../PHP Files/Message.php" method="post">
             <p>Name: <input type="text" name="name" /></p>
             <p>Email: <input type="text" name="email" /></p>
             <p>Message: <textarea type="text" name="message"></textarea></p>
