--- a/HTML Files/Message.html
+++ b/HTML Files/Message.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../CSS Files/Styles.css">
     <script src="../JavaScript Files/MyScript.js"></script>
 
-    <title>Sameer Rizvi &mdash; About</title>
+    <title>Sameer Rizvi &mdash; Inquiry</title>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
     <hr> <!--this is a horizontal line-->
 
     <center>
-        <form action="../PHP Files/Message.php" method="post">
+        <form action="../PHP Files/Send.php" method="post">
             <p>Name: <input type="text" name="name" /></p>
             <p>Email: <input type="text" name="email" /></p>
             <p>Message: <textarea type="text" name="message"></textarea></p>
