added files and folder relevant to PHPMailer class. Added some non-working PHP code to Send.php.

--- a/HTML Files/Message.html
+++ b/HTML Files/Message.html
@@ -35,6 +35,7 @@
         <form action="../PHP Files/Send.php" method="post">
             <p>Name: <input type="text" name="name" /></p>
             <p>Email: <input type="text" name="email" /></p>
+            <p>Subject: <input type="text" name="subject" /></p>
             <p>Message: <textarea type="text" name="message"></textarea></p>
             <p><input type="submit" /></p>
         </form>
