--- a/HTMLFiles/About.html
+++ b/HTMLFiles/About.html
@@ -33,8 +33,8 @@
             <!--<img src="C:\Users\srizv\OneDrive\Documents\My Portfolio\Pictures\LinkedInPicture1.png" id="ProfilePic" class="center">-->
             <img src="../Pictures/LinkedInPicture1.png" id="ProfilePic" class="center">
         </p>
-        <!--<p>For Inquiries: <a href = "mailto: srizv82@gmail.com">srizv82@gmail.com</a></p>-->
-        <a href = "./Message.html">For Inquiries</a>
+        <p>For Inquiries: <a href = "mailto: srizv82@gmail.com">srizv82@gmail.com</a></p>
+        <!--<a href = "./Message.html">For Inquiries</a>-->
     </div>
     
     <hr> <!--this is a horizontal line-->
