Added bootstrap to form. Changed Message.html to Contact.html.

--- a/HTMLFiles/About.html
+++ b/HTMLFiles/About.html
@@ -30,7 +30,7 @@
             <img src="../Pictures/LinkedInPicture1.png" id="profilepic" class="center">
         </p>
         <!--<p>For Inquiries: <a href = "mailto: srizv82@gmail.com">srizv82@gmail.com</a></p>-->
-        <a href = "./Message.html">For Inquiries</a>
+        <a href = "./Contact.html">Contact Me</a>
     </div>
     
     <hr> <!--this is a horizontal line-->
