--- a/HTMLFiles/Contact.html
+++ b/HTMLFiles/Contact.html
@@ -15,21 +15,34 @@
     <link rel="stylesheet" href="../CSSFiles/Styles.css">
     <script type="text/javascript" src="../JavaScriptFiles/MyScript.js"></script>
 
-    <title>Sameer Rizvi &mdash; Inquiry</title>
+    <title>Sameer Rizvi &mdash; Contact</title>
 </head>
 <body>
     <div class="menu docked"></div>
     <div id="messageintro" class="jumbotron">
-        <h1>Inquiries</h1>
+        <h1>Contact Form</h1>
     </div>
     <hr> <!--this is a horizontal line-->
     <center>
         <form name="emailform" id="emailform" action="https://getform.io/f/7f565008-7e7c-4d62-9f66-8ccab6c4f51f" method="POST">
-            <p><input type="text" name="name" placeholder="Name"/></p>
-            <p><input type="text" name="email" id="useremail" placeholder="Email"/></p>
-            <p><textarea type="text" name="message" id="message" placeholder="Message"></textarea></p>
-            <!--<p><input type="button" name="send" id="send" value="Send"/></p>-->
-            <p><button type="submit" name="send">Send</button></p>
+            <div class="form-row justify-content-center">
+                <div class="col-md-2">
+                    <p><input type="text" name="name" placeholder="Name" class="form-control" required/></p>
+                </div>
+                <div class="col-md-2">
+                    <p><input type="text" name="email" id="useremail" placeholder="Email" class="form-control" required/></p>
+                </div>
+            </div>
+            <div class="form-row justify-content-center">
+                <div class="col-md-4">
+                    <p><textarea type="text" name="message" id="message" placeholder="Message" class="form-control" rows="5" required></textarea></p>
+                </div>
+            </div>
+            <div class="form-row justify-content-center">
+                <div class="col-auto">
+                    <p><button type="submit" name="send" id="send" class="btn btn-outline-secondary">Send</button></p>
+                </div>
+            </div>      
         </form>
     </center>
     <p id="mailmessage"></p>
