Changed names of files and folders. Made them lowercase and simpler.

--- a/html/about.html
+++ b/html/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <!--My CSS below-->
-    <link rel="stylesheet" href="../CSSFiles/Styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 
     <!-- Bootstrap JavaScript below -->
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -26,10 +26,10 @@
     <div id="aboutintro" class="intro jumbotron">
         <h1>About</h1>
         <p>
-            <img src="../Pictures/LinkedInPicture1.png" id="profilepic" class="center">
+            <img src="../images/LinkedInPicture1.png" id="profilepic" class="center">
         </p>
         <!--<p>For Inquiries: <a href = "mailto: srizv82@gmail.com">srizv82@gmail.com</a></p>-->
-        <a href = "./Contact.html">Contact Me</a>
+        <a href = "./contact.html">Contact Me</a>
     </div>
     
     <hr>
@@ -165,7 +165,7 @@
 </body>
 
 <!--My JavaScript below-->
-<script type="text/javascript" src="../JavaScriptFiles/MyMenu.js"></script>
+<script type="text/javascript" src="../js/mymenu.js"></script>
 <!-- <script>
     PopulateFileWithMenuAsync(".html");
 </script> -->
