--- a/html/home.html
+++ b/html/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <!--My CSS below-->
-    <link rel="stylesheet" href="../CSSFiles/Styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 
     <!-- Bootstrap JavaScript below -->
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -19,16 +19,17 @@
     <!--AngularJS-->
     <script defer src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 
-    <title>Sameer Rizvi &mdash; Template</title>
+    <title>Sameer Rizvi &mdash; Home</title>
 </head>
 <body>
     <nav class="menu docked"></nav>
-    <div id="templateintro" class="intro jumbotron">
-        <h1>Template Page</h1>
+    <div id="homeintro" class="intro jumbotron">
+        <h1>Sameer Rizvi</h1>
     </div>
     <hr>
 
-    <!--ADD CONTENT HERE-->
+    <!--need something in body...it is way too empty-->
+    
 
 
     <footer class="customfooter text-center text-lg-start" id="homefooter">
@@ -49,7 +50,7 @@
 </body>
 
 <!--My JavaScript below-->
-<script type="text/javascript" src="../JavaScriptFiles/MyMenu.js"></script>
+<script type="text/javascript" src="../js/mymenu.js"></script>
 <!-- <script>
     PopulateFileWithMenuAsync(".html");
 </script> -->
