Moved html files and corrected links.

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
 
     <!--My CSS below-->
-    <link rel="stylesheet" href="../css/styles.css"/>
+    <link rel="stylesheet" href="./css/styles.css"/>
 
     <title>Sameer Rizvi &mdash; About</title>
 </head>
@@ -28,7 +28,7 @@
         <h1>About</h1>
         <p>
             <figure>
-                <img src="../images/LinkedInPicture1.png" id="profilepic" class="center" alt="Photo of the website author."/>
+                <img src="./images/LinkedInPicture1.png" id="profilepic" class="center" alt="Photo of the website author."/>
                 <figcaption><a href = "./contact.html">Contact Me</a></figcaption>
             </figure>
         </p>
@@ -159,7 +159,7 @@
 </body>
 
 <!--My JavaScript below-->
-<script type="text/javascript" src="../js/mymenu.js"></script>
+<script type="text/javascript" src="./js/mymenu.js"></script>
 <!-- <script>
     PopulateFileWithMenuAsync(".html");
 </script> -->
