--- a/about.html
+++ b/about.html
@@ -38,126 +38,126 @@
     
     <hr/>
 
-    <!-- <p>(Click on headers to expand)</p> -->
-    <h3 href="#educationtable" role="button" aria-expanded="false" aria-controls="educationtable">
-        Education</h3>
-        <table id="educationtable" cellspacing="5" cellpadding="5" width="90%" border="0">
-        <tbody>
-        <tr valign="TOP">
-        <td>
-            Mid &mdash; Summer 2021 (Expected Completion):
-        </td> 
-        <td>
-            Syracuse University &mdash; Syracuse, NY
-            <br/>              
-            <strong>M.S. in Computer Science</strong>
-            <br/>
-        </td>
-        </tr>
-    <tr valign="TOP">
-        <td>
-        2015:</td> 
-        <td>
-            Loyola University Chicago &mdash; Chicago, IL 
-            <br/>              
-            <strong>B.S. in Computer Science</strong>, Cum Laude
-            <br/>
-        </td> 
-        </tr>
-        </tbody>
-    </table>
-    <h3 href="#employmenttable" role="button" aria-expanded="false" aria-controls="employmenttable">Professional Experience</h3>
-    <table id="employmenttable" cellspacing="5" cellpadding="5" width="90%" border="0">
-    <tbody>
-        <tr valign="TOP">
-        <td>
-        2018:
-        </td> 
-        <td>
-            <strong>American Hotel Register Company &mdash; Vernon Hills, IL</strong><br/>              
-            <strong>Junior Software Developer</strong>
-            <br/>     
-        <ul>
-            <li>Assisted in new development and maintenance of ASP.NET MVC e-commerce website (C# as back-end)</li>
-            <li>New development included implementing HTML forms with client-side and server-side validation, implementing asynchronous operations in controller, retrieving information (using ADO.NET Entity Data Models and LINQ) from SQL Server database, etc.</li>
-            <li>Maintenance included product support by responding to user requests and investigating user concerns</li>
-            <li>Other tasks included code refactorings and adding comments in code files</li>
-        </ul>
-        </td>
-        </tr>
-    <tr valign="TOP">
-        <td>
-        2016-2018:
-    </td> 
-        <td>
-            <strong>ACS Group &mdash; New Berlin, WI</strong>
-            <br/>              
-            <strong>Information Systems Specialist</strong>
-            <br/>      
-    <ul>
-        <li>Constructed a separate <q>Configurator</q> &mdash; an application that allows Sales and Engineering to configure any product offered by the company, generate quotes and sales orders - for each product offered by the company </li>
-        <li>Tested inside of Microsoft Dynamics which is the platform used to launch the <q>Configurator</q>, while providing Microsoft Dynamics training to end users </li>
-        <li>Interacted, introduced, and reviewed requirements with Sales, Engineering and Production departments to ensure proper solution is delivered in a timely manner</li>
-    </ul>
-    </td> 
-    </tr>
-    <tr valign="TOP">
-        <td>
-        2014-2015:</td> 
-        <td>
-            <strong>Parker Hannifin Corporation &mdash; Lincolnshire, IL</strong> 
-            <br/>              
-            <strong>Software Development Intern</strong>
-            <br/>      
-    <ul>
-        <li>Built ASP.NET webforms application (C# for backend) for a Microsoft SQL Server database</li>
-        <li>Hosted web application on Windows Server 2012 via IIS</li>
-        <li>Designed barcode labels using Zebra Designer Pro software</li>
-        <li>Answered help desk tickets and addressed any technical employee concerns related to software and/or hardware</li>
-    </ul>
-    </td> 
-    </tr>
-    <tr valign="TOP">
-        <td>2014:</td> 
-        <td>
-            <strong>Northwestern Mutual &mdash; Milwaukee, WI</strong> 
-            <br/>              
-            <strong>I.T. Intern</strong>
-            <br/>      
-    <ul>
-        <li>Developed interactive reports using Cognos Report Studio and tested them for format and/or data defects </li>
-        <li>Learned SQL in order to write queries via Rapid SQL and facilitated in debugging and fixing C# code that caused an application to crash</li>
-        <li>Used various Microsoft Office applications to collaborate and complete tasks </li>
-    </ul>
-    </td> 
-    </tr>
-    </tbody></table>
-    <h3 href="#websitetechnologiestable" role="button" aria-expanded="false" aria-controls="websitetechnologiestable">
-        Website Technologies
-          <!-- <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" id="afterarrow" class="bi bi-arrow-down-circle-fill" viewBox="0 0 16 16">
-            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
-          </svg> -->
-    </h3>
-        <table id="websitetechnologiestable" cellspacing="5" cellpadding="5" width="90%" border="0">
-        <tbody>
-            <tr valign="TOP">
-                <th>Technologies used (as of now) in the construction of this web portfolio:</th>
-            </tr>
-            <tr>
-            <td>
-                <!-- <strong>Technologies used (as of now) in the construction of this web portfolio:</strong> -->
+    <div id="detailsdiv">
+        <details>       
+            <!-- <h3 href="#educationtable" role="button" aria-expanded="false" aria-controls="educationtable">Education</h3> -->
+                <!-- <h3>Education</h3> -->
+            <summary>Education</summary>
+            <table id="educationtable" cellspacing="5" cellpadding="5" width="90%" border="0">
+            <tbody>
+                <tr valign="TOP">
+                    <td>Mid &mdash; Summer 2021 (Expected Completion):</td> 
+                <td>
+                    Syracuse University &mdash; Syracuse, NY
+                    <br/>              
+                    <strong>M.S. in Computer Science</strong>
+                    <br/>
+                </td>
+                </tr>
+                <tr valign="TOP">
+                    <td>2015:</td> 
+                    <td>
+                        Loyola University Chicago &mdash; Chicago, IL 
+                        <br/>              
+                        <strong>B.S. in Computer Science</strong>, Cum Laude
+                        <br/>
+                    </td> 
+                </tr>
+            </tbody>
+            </table>
+        </details>
+
+        <details>
+            <!-- <h3 href="#employmenttable" role="button" aria-expanded="false" aria-controls="employmenttable">Professional Experience</h3> -->
+            <summary>Professional Experience</summary>
+            <table id="employmenttable" cellspacing="5" cellpadding="5" width="90%" border="0">
+            <tbody>
+                <tr valign="TOP">
+                    <td>2018:</td> 
+                        <td>
+                            <strong>American Hotel Register Company &mdash; Vernon Hills, IL</strong><br/>              
+                            <strong>Junior Software Developer</strong>
+                            <br/>     
+                        <ul>
+                            <li>Assisted in new development and maintenance of ASP.NET MVC e-commerce website (C# as back-end)</li>
+                            <li>New development included implementing HTML forms with client-side and server-side validation, implementing asynchronous operations in controller, retrieving information (using ADO.NET Entity Data Models and LINQ) from SQL Server database, etc.</li>
+                            <li>Maintenance included product support by responding to user requests and investigating user concerns</li>
+                            <li>Other tasks included code refactorings and adding comments in code files</li>
+                        </ul>
+                        </td>
+                </tr>
+                <tr valign="TOP">
+                    <td>2016-2018:</td> 
+                    <td>
+                        <strong>ACS Group &mdash; New Berlin, WI</strong>
+                        <br/>              
+                        <strong>Information Systems Specialist</strong>
+                        <br/>      
                 <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <!-- <li>Bootstrap</li> -->
-                    <li>AngularJS</li>
-                    <!-- <li>Visual Studio Code</li> -->
+                    <li>Constructed a separate <q>Configurator</q> &mdash; an application that allows Sales and Engineering to configure any product offered by the company, generate quotes and sales orders - for each product offered by the company </li>
+                    <li>Tested inside of Microsoft Dynamics which is the platform used to launch the <q>Configurator</q>, while providing Microsoft Dynamics training to end users </li>
+                    <li>Interacted, introduced, and reviewed requirements with Sales, Engineering and Production departments to ensure proper solution is delivered in a timely manner</li>
                 </ul>
-            </td>
-            </tr>
-        </tbody>
-    </table>
+                </td> 
+                </tr>
+                <tr valign="TOP">
+                    <td>2014-2015:</td> 
+                    <td>
+                        <strong>Parker Hannifin Corporation &mdash; Lincolnshire, IL</strong> 
+                        <br/>              
+                        <strong>Software Development Intern</strong>
+                        <br/>      
+                <ul>
+                    <li>Built ASP.NET webforms application (C# for backend) for a Microsoft SQL Server database</li>
+                    <li>Hosted web application on Windows Server 2012 via IIS</li>
+                    <li>Designed barcode labels using Zebra Designer Pro software</li>
+                    <li>Answered help desk tickets and addressed any technical employee concerns related to software and/or hardware</li>
+                </ul>
+                </td> 
+                </tr>
+                <tr valign="TOP">
+                    <td>2014:</td> 
+                    <td>
+                        <strong>Northwestern Mutual &mdash; Milwaukee, WI</strong> 
+                        <br/>              
+                        <strong>I.T. Intern</strong>
+                        <br/>      
+                <ul>
+                    <li>Developed interactive reports using Cognos Report Studio and tested them for format and/or data defects </li>
+                    <li>Learned SQL in order to write queries via Rapid SQL and facilitated in debugging and fixing C# code that caused an application to crash</li>
+                    <li>Used various Microsoft Office applications to collaborate and complete tasks </li>
+                </ul>
+                </td> 
+                </tr>
+            </tbody>
+            </table>
+        </details>
+
+        <details>
+            <!-- <h3 href="#websitetechnologiestable" role="button" aria-expanded="false" aria-controls="websitetechnologiestable">Website Technologies</h3> -->
+            <summary>Website Technologies</summary>
+                <table id="websitetechnologiestable" cellspacing="5" cellpadding="5" width="90%" border="0">
+                <tbody>
+                    <tr valign="TOP">
+                        <th>Technologies used (as of now) in the construction of this web portfolio:</th>
+                    </tr>
+                    <tr>
+                    <td>
+                        <!-- <strong>Technologies used (as of now) in the construction of this web portfolio:</strong> -->
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <!-- <li>Bootstrap</li> -->
+                            <li>AngularJS</li>
+                            <!-- <li>Visual Studio Code</li> -->
+                        </ul>
+                    </td>
+                    </tr>
+                </tbody>
+            </table>
+        </details>
+    </div>
     <footer>
         <hr>
         <div>
