--- a/contact.html
+++ b/contact.html
@@ -30,25 +30,28 @@
     </header>
     <hr/>
     <table id="contacttable">
-        <tr>
-        <form name="emailform" id="emailform" action="https://getform.io/f/7f565008-7e7c-4d62-9f66-8ccab6c4f51f" method="POST" novalidate>
-            <p style="text-align:center;">To contact me, please fill out and submit the form below.</p>
-            <td>
-                    <p><input type="text" name="name" id="username" ng-model="name" placeholder="Name" class="form-control" minlength="1" required/></p>
-                    <span class="errortext" ng-show="emailform.name.$touched && emailform.name.$invalid">
-                        <span ng-show="emailform.name.$error.required">Name is required.</span>
-                    </span>
-            </td>
-            <td>
-                    <p><input type="email" name="email" id="useremail" ng-model="useremail" placeholder="Email" class="form-control" minlength="1" required/></p>
-                    <span class="errortext" ng-show="emailform.email.$touched && emailform.email.$invalid">
-                        <span ng-show="emailform.email.$error.required">Email is required.</span>
-                        <span ng-show="emailform.email.$invalid">Incorrect format.</span>
-                    </span>
-            </td>
-        </tr>
+        <tbody>
+            <tr>
+            <form name="emailform" id="emailform" action="https://getform.io/f/7f565008-7e7c-4d62-9f66-8ccab6c4f51f" method="POST" novalidate>
+                <p style="text-align:center;">To contact me, please fill out and submit the form below.</p>
+                <td>
+                        <p><input type="text" name="name" id="username" ng-model="name" placeholder="Name" class="form-control" minlength="1" required/></p>
+                        <span class="errortext" ng-show="emailform.name.$touched && emailform.name.$invalid">
+                            <span ng-show="emailform.name.$error.required">Name is required.</span>
+                        </span>
+                </td>
+                <td>
+                        <p><input type="email" name="email" id="useremail" ng-model="useremail" placeholder="Email" class="form-control" minlength="1" required/></p>
+                        <span class="errortext" ng-show="emailform.email.$touched && emailform.email.$invalid">
+                            <span ng-show="emailform.email.$error.required">Email is required.</span>
+                            <span ng-show="emailform.email.$invalid">Incorrect format.</span>
+                        </span>
+                </td>
+            </tr>
+        </tbody>
     </table>
     <table id="contacttable">
+        <tbody>
         <tr>
             <td id="messagetd">
                     <p><textarea name="message" id="usermessage" ng-model="message" placeholder="Message" class="form-control" rows="5" cols="50" minlength="1" required></textarea></p>
@@ -56,8 +59,9 @@
                         <span ng-show="emailform.message.$error.required">Message is required.</span>
                     </span>
                     <p><button type="submit" name="send" id="emailsender" class="btn btn-outline-secondary" ng-disabled="emailform.name.$invalid || emailform.email.$invalid || emailform.message.$invalid">Send</button></p>
-                </td>
+            </td>
         </tr>
+        </tbody>
     </table>
         </form>
     
