--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="intro">
         <header id="homeintro" class="jumbotron">
         <!-- <header id="homeintro" > -->
-            <h1>Sameer Rizvi SR</h1>
+            <h1>Sameer Rizvi</h1>
             <h2>Web Portfolio</h2>
         </header>
     </div>
