--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <title>Sameer Rizvi - Home</title>
 
     <!--My JavaScript below-->
-    <!-- <script type="module" src="./js/modules/menuasync.js"></script>
-    <script type="module" src="./js/mymenu.js"></script> -->
+    <script type="module" src="./js/modules/menuasync.js"></script>
+    <script type="module" src="./js/mymenu.js"></script>
     
-    <script type="text/javascript" src="./js/mymenu.js" defer></script>
+    <!-- <script type="text/javascript" src="./js/mymenu.js" defer></script> -->
     
 </head>
 <body>
